--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ select {
     box-sizing: border-box;
 }
 
-input[type="submit"] {
+.submit {
     font-size: 16px;
     padding: 10px 20px;
     margin-top: 20px;
@@ -50,7 +50,7 @@ input[type="submit"] {
     cursor: pointer;
 }
 
-input[type="submit"]:hover {
+.submit:hover {
     background-color: #45a049;
 }
 
