--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,7 @@ select {
     font-size: 16px;
     padding: 10px 20px;
     margin-top: 20px;
+    margin-left: 75px;
     background-color: #4CAF50;
     color: white;
     border: none;
